Ui related modifications

--- a/res/layout/activity_demo_twitter_base.xml
+++ b/res/layout/activity_demo_twitter_base.xml
@@ -1,18 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
-    <Button android:id="@+id/postImageButton"
+    android:layout_height="match_parent" >
+
+    <Button
+        android:id="@+id/postImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:text="@string/post_image"/>
-    
-       <Button android:id="@+id/postTweetButton"
+        android:layout_margin="10dp"
+        android:text="@string/post_image" />
+
+    <Button
+        android:id="@+id/postTweetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:text="@string/post_tweet"/>
+        android:layout_margin="10dp"
+        android:text="@string/post_tweet" />
 
 </RelativeLayout>
